--- a/src/meson.build
+++ b/src/meson.build
@@ -24,38 +24,30 @@ fortranobject_c = run_command(py,
 
 py_mod_name = 'sdepack'
 
-fortran_sources = run_command(py, ['-c',
-    'import glob; print(" ".join(glob.glob("*.f")))'
-], check: true).stdout().strip().split()
-message('Fortran sources: ', fortran_sources)
+fortran_sources = [
+  'r8_normal.f',
+  'r8_uniform.f',
+  'rk1_ti_solve.f',
+  'output.f'
+]
+
+pyf_sources = [
+  'sdepack.pyf'
+]
+
+message('Fortran sources: ', fortran_sources + pyf_sources)
 
 f2py_target = custom_target(
   py_mod_name + '_f2py',
-  input: fortran_sources,
-  output: ['_' + py_mod_name + 'module.c', '_' + py_mod_name + '-f2pywrappers.f'],
-  command: [
-    f2py,
-    '@INPUT@',
-    '-m', '_' + py_mod_name,
-    '--lower',
-    '--build-dir', meson.current_build_dir()
-  ]
+  input: pyf_sources,
+  output: [py_mod_name + 'module.c', py_mod_name + '-f2pywrappers.f'],
+  command: [f2py, '@INPUT@', '--lower', '--build-dir', meson.current_build_dir()]
 )
 
 py.extension_module(
-  '_' + py_mod_name,
+  py_mod_name,
   fortran_sources + [f2py_target, fortranobject_c],
   c_args: ['-I' + incdir_numpy, '-I' + incdir_f2py],
   dependencies: py_dep,
   install: true
-)
-
-python_sources = run_command(py, ['-c',
-    'import glob; print(" ".join(glob.glob("*.py")))'
-], check: true).stdout().strip().split()
-message('Python sources: ', python_sources)
-
-py.install_sources(
-  python_sources,
-  subdir: py_mod_name
 )
