--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,8 +13,8 @@ permissions:
   id-token: write
 
 jobs:
-  documentation:
-    name: Generate Documentation
+  build:
+    name: Build Documentation
     runs-on: ubuntu-latest
 
     steps:
@@ -36,5 +36,16 @@ jobs:
         with:
           path: site
 
+  deploy:
+    name: Deploy to GitHub Pages
+    if: github.event_name != 'pull_request'
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
